mise à jour : lien exploitable du header, réarrangement des fichier scss

--- a/Projets/OhMyFood/ohmyfood.html
+++ b/Projets/OhMyFood/ohmyfood.html
@@ -7,11 +7,11 @@
     </head>
 
     <body>
-    	<!--<a href="ohmyfood.html">-->
+    	<a href="ohmyfood.html">
 			<header class="header">
     			<h1>Ohmyfood</h1>
 			</header>
-		<!--</a>-->
+		</a>
 
     	<section class="menus">
 			<a href="menu/menu-enchantee.html" class="menus__card menus__card--orange">	
